# Arrow-Guided-VLM-Enhancing-Flowchart-Understanding-via-Arrow-Direction-Encoding

./: .env.example  DockerRun.sh  Dockerfile  README.md  pyproject.toml  requirements.txt
csv/: source_of_FC_questions.csv
data/: q_a_result_predict.json  q_a_result_predict_with_categories.json  質問と回答事例.csv
json/: flowchart-example002.json  flowchart-example003.json  flowchart-example007.json  flowchart-example009.json  flowchart-example017.json  flowchart-example019.json  flowchart-example020.json  flowchart-example025.json  flowchart-example029.json  flowchart-example037.json  flowchart-example049.json  flowchart-example052.json  flowchart-example101.json  flowchart-example102.json  flowchart-example106.json  flowchart-example109.json  flowchart-example110.json  flowchart-example112.json  flowchart-example113.json  flowchart-example117.json  flowchart-example150.json  flowchart-example151.json  flowchart-example152.json  flowchart-example154.json  flowchart-example155.json  flowchart-example165.json  flowchart-example167.json  flowchart-example179.json  flowchart-example190.json  flowchart-example194.json
notebook/: G_detect_flowchart.ipynb  G_detect_flowchart_yolo.ipynb  G_detect_flowchart_yoloDamo.ipynb
results/: _model_with_dec_ocr_evaluation_results.csv  model_comparison_results.csv  model_with_dec_ocr_evaluation_results.csv  model_with_no_dec_ocr_evaluation_results.csv
src/: analysis.py  check_dataset.py  eval_model_outputs.py  get_text_using_ocr.py  graph.py  llm_nodes.py  llm_with_langchain.py  make_question.py  ocr_agent.py  ocr_nodes.py  state.py  utility.py
src/evaluator/: graph.py  (+4 more)
(+18 files in other folders)
