[project]
name = "gg-rq-rag-flowchat-detection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryo-bot", email = "127573349+ryo63-bot@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gg_rq_rag_flowchat_detection"]

[tool.pytest.ini_options]
pythonpath = ["."]
