[project]
name = "arrow-guided-vlm"
version = "0.1.0"
description = "Arrow-Guided VLM: Enhancing Flowchart Understanding via Arrow Direction Encoding"
authors = [
    { name = "Ryo-bot", email = "127573349+ryo63-bot@users.noreply.github.com" }
]
dependencies = [
    "pydantic==2.11.1",
    "ruff==0.11.2",
    "langchain-core>=0.3.51",
    "langchain-openai==0.3.12",
    "langgraph==0.3.24",
    "python-dotenv==1.1.0",
    "pytest==8.3.5",
    "azure-ai-formrecognizer==3.3.0",
    "pillow==11.2.1",
    "matplotlib==3.10.1",
    "langchain-community==0.3.21",
    "pandas==2.2.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
